# chat-with-docs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml
chat_with_docs/: __init__.py  main.py
tests/: __init__.py  test_version.py
