[project]
name = "chat-with-docs"
version = "0.1.0"
description = "Chat with your documentation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "lilypad-sdk[anthropic,gemini,openai]>=0.2.3",
    "mirascope[anthropic,gemini,openai]>=1.24.0",
    "rich>=14.0.0",
]

[project.scripts]
chat-with-docs = "chat_with_docs.main:main"

[project.urls]
Repository = "https://github.com/Mirascope/chat-with-docs"
Issues = "https://github.com/Mirascope/chat-with-docs/issues"

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.7",
    "pytest>=8.3.2",
    "pyright>=1.1.396",
    "pre-commit>=3.8.0",
]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = ["S101", "ANN"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "YTT",
    "B",
    "T10",
    "T20",
    "C4",
    "PYI006",
    "SIM",
    "ANN",
    "RUF022",
]
ignore = ['D105', 'D107', 'D205', 'D415', 'E501', 'B011', 'B028', 'B904']
fixable = ["ALL"]
pydocstyle = { convention = 'google' }
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
exclude = [
    ".venv",
    "build",
]
venvPath = "."
venv = ".venv"

[tool.codespell]
skip = [".git", "*.lock"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"